--- a/README
+++ b/README
@@ -10,7 +10,7 @@ to build this project with expo, run:
 
         cd React-Native-Project
 
-        npm insall
+        npm install
 
         npx expo start --web # to run this with web view
 
